--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,7 +2,9 @@
   <span class="title">{{ title }}</span>
   <span class="spacer"></span>
   <nav>
-    <button mat-button routerLink="/admin" routerLinkActive="active-link">Administration</button>
+    @if (isAdmin()) {
+      <button mat-button routerLink="/admin" routerLinkActive="active-link">Administration</button>
+    }
     <button mat-button routerLink="/viewer" routerLinkActive="active-link">Viewer</button>
   </nav>
 </mat-toolbar>
