Change chip colors

--- a/frontend/src/app/technology-table/technology-table.component.css
+++ b/frontend/src/app/technology-table/technology-table.component.css
@@ -1,10 +1,7 @@
-/*TODO: fix colors of chips*/
 .published {
-  background-color: var(--mat-sys-primary) !important;
-  color: white !important;
+  background-color: var(--mat-sys-primary-container) !important;
 }
 
 .unpublished {
-  label-text-color: var(--mat-sys-primary) !important;
-  background-color: white !important;
+  background-color: var(--mat-sys-background) !important;
 }
