--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span class="title">{{ title }}</span>
+  <span class="title dont-show-small">{{ title }}</span>
   @if (isLoggedIn()) {
     <nav class="m-3">
       @if (isAdmin()) {
@@ -13,4 +13,3 @@
   }
 </mat-toolbar>
 <router-outlet></router-outlet>
-<!--<app-messages></app-messages>-->
